SAP_V3ToProd/objects/User_Profile__c.object
<CustomObject>
    <description>Used to look up the User Profile ID by the Wholesaler Number, Role Key and Wholesaler Type.</description>
    <fields>
        <fullName>Profile_ID_User__c</fullName>
        <description>Profile ID for User based on the wholesaler number, role key and wholesaler type.</description>
        <label>Profile ID User</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_WSLR__c</fullName>
        <description>Profile Name matched to the Profile ID</description>
        <label>Profile Name WSLR</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Key_MOB__c</fullName>
        <description>Role key used in Mobility manager to give the user a title.</description>
        <label>Role Key_MOB</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <description>Role title matched to the role key from Mobility Manager.</description>
        <label>Role Title MOB</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Number__c</fullName>
        <description>Wholesaler Number used to define the profile ID.</description>
        <label>Wholesaler_Number</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>User Profile</label>
    <nameField>
        <label>User Profiles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>